2010-01-13  Kaz Kylheku  <kkylheku@gmail.com>

	Bugfix: allow unescaped / to be used in regex character classes.

	To do this, we no longer make the lexer look for the terminating
	slash which ends the regex syntax. This is driven by the parser,
	which calls a special function in the lexer to indicate that
	the regex parsing is done.

	* parser.h (end_of_regex): New function declared.

	* parser.l (REGCLASS): Unused start condition removed.
	(grammar): A slash character in the REGEX start condition is now simply
	returned as an operator token; no popping of the state stack takes
	place. The scanner stays in REGEX mode.
	(end_of_regex): New function.

	* parser.y (regex): Call end_of_regex when a regex is successfully
	scanned through to terminating slash, or if a syntax error occurs.
	(regchar): Can derive a / terminal now, thus including it in a
	regex character class.

2010-01-13  Kaz Kylheku  <kkylheku@gmail.com>

	* parser.y (precedence): bugfix: character classes like this [^*]
	being treated as a non-complemented set of two characters.

2010-01-13  Kaz Kylheku  <kkylheku@gmail.com>

	Dynamically determine which regex implementation to use:
	NFA or derivatives. The default behavior is NFA, with
	derivatives used if the regular expression contains
	uses of complement or intersection. The --dv-regex
	option forces derivatives always.

	* regex.c (opt_derivative_regex): Default value is 0 now.
	(regex_requires_dv): New function.
	(regex_compile): If regex_requires_dv function reports
	true, or if the opt_derivative_regex flag is true,
	treat the regex with the derivative-based implementation.

	* txr.c (txr_main): Implemented --dv-regex option
	to set the opt_derivative_regex flag.

2010-01-13  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.h (c_num): Remove redundant declaration.

2010-01-13  Kaz Kylheku  <kkylheku@gmail.com>

	Impelement derivative-based regular expressions.

	* lib.c (chset_s, compiled_regex_s): New symbol globals.